add:新增 查询需求详情、接单、删除需求、拉黑+解除拉黑用户
